--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
 
 	"author": "Greg Garcia",
 	"background": {
-		"scripts": ["eventPage.js"],
+		"scripts": ["background.js"],
 		//Recommended
 		"persistent": false
 	},
@@ -24,9 +24,8 @@
 	"content_scripts": [
 	{
 		// fix this
-		"matches": ["https://courses.osu.edu/psp/csosuct/EMPLOYEE/PUB/c/COMMUNITY_ACCESS.CLASS_SEARCH.GBL", "https://classes.osu.edu/class-search/*"],
-		"js": ["jquery-3.0.0.min.js", "content.js"],
-		"run_at": "document_idle"
+		"matches": ["https://classes.osu.edu/class-search/*"],
+		"js": ["jquery-3.0.0.min.js", "content.js"]
 	}
 	],
 
