--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
 
 	// Recommended
 	//"default_locale": "en",
-	"description": "An extensin that populates Rate My Professor information for CSE faculty at Ohio State University",
+	"description": "An extensin that allows user to view RateMyProfessors.com information for each Professor listed on course search page.",
 	"browser_action": {
 		"default_icon": "icon.png"
 	},
@@ -17,23 +17,20 @@
 	"author": "Greg Garcia",
 	"background": {
 		"scripts": ["eventPage.js"],
-		//Recommended
 		"persistent": false
 	},
 
 	"content_scripts": [
 	{
-		// fix this
 		"matches": ["https://classes.osu.edu/class-search/*"],
 		"css": ["style.css"],
-		"js": ["jquery-3.0.0.min.js", "content.js"]
+		"js": ["content.js"]
 	}
 	],
 
 	"permissions": [
 		"http://www.ratemyprofessors.com/*",
-		"tabs",
-		"webNavigation"
+		"tabs"
 	],
 
 	"web_accessible_resources": [
